feat: create pre inspections routes

--- a/src/lang/en/en.json
+++ b/src/lang/en/en.json
@@ -1,5 +1,6 @@
 {
   "translation": {
-    "helloWorld": "Hello World!!!"
+    "helloWorld": "Hello World!!!",
+    "whichAreaDoYouWantToInspect": "Which Area Do You Want To Inspect?"
   }
 }
