feat: add get biodiversity, add biodiversity on sqlite hook

--- a/src/lang/pt/pt.json
+++ b/src/lang/pt/pt.json
@@ -7,7 +7,7 @@
     "treesResult": "Resultado de árvores",
     "treesResultDescription": "Número de árvores, palmeiras e outras plantas com mais de 5 cm de diâmetro encontradas na área de regeneração. Somente plantas manejadas ou plantadas pelo gerador devem ser contabilizadas.",
     "biodiversityResult": "Resultado de biodiversidade",
-    "biodiversityResultDescription": "Número de árvores, palmeiras e outras plantas com mais de 5 cm de diâmetro encontradas na área de regeneração. Somente plantas manejadas ou plantadas pelo gerador devem ser contabilizadas.",
+    "biodiversityResultDescription": "O número de diferentes espécies de árvores, palmeiras e outras plantas com mais de 5 cm de diâmetro encontradas na área de regeneração. Somente plantas manejadas ou plantadas pelo regenerador devem ser contabilizadas.",
     "report": "Relatório",
     "reportDescription": "Conforme for preenchendo os dados, um relatório automatizado com a justificativa do resultado encontrado será criado automaticamente e estará disponível para download.",
     "howWouldYouLikeCollectData": "Como gostaria de coletar os dados?",
