feat: basic translate english

--- a/src/lang/en/en.json
+++ b/src/lang/en/en.json
@@ -1,7 +1,82 @@
 {
   "translation": {
-    "helloWorld": "Hello World!!!",
     "whichAreaDoYouWantToInspect": "Which Area Do You Want To Inspect?",
+    "selectInspection": "Select inspection",
+    "seeYourAreasAlreadyInspected": "See your areas already inspected",
+    "inspectedAreas": "Inspected areas",
+    "selectYourLanguage": "Select your language",
+    "searchInspection": "Search inspection",
+    "searchInspectionByID": "Search inspection by ID",
+    "typeIDHere": "Type ID here",
+    "search": "Search",
+    "or": "or",
+    "accessInspectionList": "Access inspections list",
+    "inspectionsList": "Inspections list",
+    "inspection": "Inspection",
+    "regenerator": "Regenerator",
+    "open": "Open",
+    "accepted": "Accepted",
+    "realized": "Realized",
+    "invalidated": "Invalidated",
+    "status": "Status",
+    "requestedAt": "Requested at",
+    "regeneratorWallet": "Regenerator wallet",
+    "name": "Name",
+    "totalArea": "Total area",
+    "continue": "Continue",
+    "youCanOnlyInspectInspectionOpenedAndAccepted": "You can only inspect inspections opened and accepted",
+    "atention": "Atention",
+    "areaPreview": "Area preview",
+    "areaSize": "Area size",
+    "coordinates": "Coordinates",
+    "startInspection": "Start inspection",
+    "youAreInInspectionMode": "You are in inspection mode",
+    "touchHereToExit": "Touch here to exit",
+    "previous": "Previous",
+    "next": "Next",
+    "start": "Start",
+    "manual": "Manual",
+    "sampling": "Sampling",
+    "proofPhoto": "Proof photo",
+    "markAsRealized": "Mark as realized",
+    "deleteInspection": "Delete inspection",
+    "realizeInspection": "Realize inspection",
+    "registerNewTree": "Register new tree",
+    "trees": "Trees",
+    "biodiversity": "Biodiversity",
+    "register": "Register",
+    "yourLocation": "Your location",
+    "registerPhoto": "Register photo",
+    "specie": "Specie",
+    "addNewBiodiversity": "Add new biodiversity",
+    "takePhoto": "Take photo",
+    "takeAnother": "Take another",
+    "confirm": "Confirm",
+    "textConfirmFinishInspection": "Do you want to finish the inspection? Once finished, you will not be able to edit the data in it.",
+    "finishInspection": "Finish inspection",
+    "cancel": "Cancel",
+    "textConfirmDeleteInspection": "Do you want to delete this inspection? All data recorded in it will be deleted.",
+    "coordinate": "Coordinate",
+    "textConfirmDeleteTree": "Do you want to delete this tree?",
+    "deleteTree": "Delete tree",
+    "textConfirmDeleteBio": "Do you want to delete this biodiversity?",
+    "deleteBio": "Delete biodiversity",
+    "noBiodiversityRegistered": "No biodiversity registered",
+    "noTreeRegistered": "No tree registered",
+    "finalResult": "Final result",
+    "sharePDF": "Share PDF",
+    "areaInspection": "Area inspection",
+    "treesSampling": "Trees sampling",
+    "samplings": "Samplings",
+    "selectTheSizeOfRadiusOfSampling": "Select the size of radius of sampling",
+    "thereAreNotAnySamplingCreated": "There are not any sampling created",
+    "createNewSampling": "Create new sampling",
+    "createSampling": "Create sampling",
+    "generatePoint": "Generate point",
+    "touchToEnterThisSampling": "Touch to enter this sampling",
+    "textConfirmDeleteSampling": "Do you want to delete this sampling? All data recorded in it will be deleted.",
+    "deleteSampling": "Delete sampling",
+    "tutorial": "Tutorial",
     "overview": "Overview",
     "overviewDescription": "Your objective is to evaluate the number of trees larger than 5 cm in diameter in the selected area, as well as their species diversity.",
     "treesResult": "Trees result",
