feat: basic translation pt

--- a/src/lang/pt/pt.json
+++ b/src/lang/pt/pt.json
@@ -11,6 +11,82 @@
     "report": "Relatório",
     "reportDescription": "Conforme for preenchendo os dados, um relatório automatizado com a justificativa do resultado encontrado será criado automaticamente e estará disponível para download.",
     "howWouldYouLikeCollectData": "Como gostaria de coletar os dados?",
-    "descHowWouldYouLikeCollectData": "No método manual, as árvores precisam ser inseridas uma a uma, indicado para áreas pequenas. Já no método por amostragem, são coletadas amostras e o resultado total é estimado, indicado para grandes áreas."
+    "descHowWouldYouLikeCollectData": "No método manual, as árvores precisam ser inseridas uma a uma, indicado para áreas pequenas. Já no método por amostragem, são coletadas amostras e o resultado total é estimado, indicado para grandes áreas.",
+    "selectInspection": "Selecionar inspeção",
+    "seeYourAreasAlreadyInspected": "Ver áreas já inspecionadas",
+    "inspectedAreas": "Áreas inspecionadas",
+    "selectYourLanguage": "Selecione seu idioma",
+    "searchInspection": "Buscar inspeção",
+    "searchInspectionByID": "Buscar inspeção pelo ID",
+    "typeIDHere": "Digite o ID aqui",
+    "search": "Buscar",
+    "or": "ou",
+    "accessInspectionList": "Acesse a lista de inspeções",
+    "inspectionsList": "Lista de inspeções",
+    "inspection": "Inspeção",
+    "regenerator": "Regenerador",
+    "open": "Aberta",
+    "accepted": "Aceita",
+    "realized": "Realizada",
+    "invalidated": "Inválida",
+    "status": "Status",
+    "requestedAt": "Solicitada em",
+    "regeneratorWallet": "Wallet do regenerador",
+    "name": "Nome",
+    "totalArea": "Área total",
+    "continue": "Continuar",
+    "youCanOnlyInspectInspectionOpenedAndAccepted": "Você só pode inspecionar inspeções abertas ou aceitas",
+    "atention": "Atenção",
+    "areaPreview": "Visão geral da área",
+    "areaSize": "Tamanho da área",
+    "coordinates": "Coordenadas",
+    "startInspection": "Começar inspeção",
+    "youAreInInspectionMode": "Você está no modo inspeção",
+    "touchHereToExit": "Toque aqui para sair",
+    "previous": "Anterior",
+    "next": "Próximo",
+    "start": "Começar",
+    "manual": "Manual",
+    "sampling": "Amostragem",
+    "proofPhoto": "Foto de prova",
+    "markAsRealized": "Marcar como concluída",
+    "deleteInspection": "Apagar inspeção",
+    "realizeInspection": "Realizar inspeção",
+    "registerNewTree": "Registrar nova planta",
+    "trees": "Plantas",
+    "biodiversity": "Biodiversidade",
+    "register": "Registrar",
+    "yourLocation": "Sua localização",
+    "registerPhoto": "Registrar foto",
+    "specie": "Espécie",
+    "addNewBiodiversity": "Registrar como nova biodiversidade",
+    "takePhoto": "Tirar foto",
+    "takeAnother": "Tirar outra",
+    "confirm": "Confirmar",
+    "textConfirmFinishInspection": "Você quer finalizar a inspeção? Ao finalizar, não será possível editar os dados.",
+    "finishInspection": "Finalizar inspeção",
+    "cancel": "Cancelar",
+    "textConfirmDeleteInspection": "Você quer apagar essa inspeção? Todos os dados registrados nela serão perdidos.",
+    "coordinate": "Coordenada",
+    "textConfirmDeleteTree": "Você quer apagar essa planta?",
+    "deleteTree": "Apagar planta",
+    "textConfirmDeleteBio": "Você quer apagar essa biodiversidade?",
+    "deleteBio": "Apagar biodiversidade",
+    "noBiodiversityRegistered": "Nenhum registro de biodiversidade",
+    "noTreeRegistered": "Nenhum registro de plantas",
+    "finalResult": "Resultado final",
+    "sharePDF": "Compartilhar PDF",
+    "areaInspection": "Inspeção da área",
+    "treesSampling": "Amostragens de plantas",
+    "samplings": "Amostragens",
+    "selectTheSizeOfRadiusOfSampling": "Selecione o tamanho do raio da amostragem",
+    "thereAreNotAnySamplingCreated": "Não tem nenhuma amostragem criada",
+    "createNewSampling": "Criar nova amostragem",
+    "createSampling": "Criar amostragem",
+    "generatePoint": "Gerar ponto",
+    "touchToEnterThisSampling": "Toque para entrar nessa amostragem",
+    "textConfirmDeleteSampling": "Você quer apagar essa amostragem? Todos os dados registrados nela serão perdidos.",
+    "deleteSampling": "Apagar amostragem",
+    "tutorial": "Tutorial"
   }
 }
