fix: description tutorials

--- a/src/lang/en/en.json
+++ b/src/lang/en/en.json
@@ -80,9 +80,9 @@
     "overview": "Overview",
     "overviewDescription": "Your objective is to evaluate the number of trees larger than 5 cm in diameter in the selected area, as well as their species diversity.",
     "treesResult": "Trees result",
-    "treesResultDescription": "The number of trees, palm trees and other plants larger than 5cm in diameter found in the regeneration area. Only plants managed or planted by the regenerator must be counted.",
+    "treesResultDescription": "The number of trees, palm trees and other plants over 1m high and 3cm in diameter found in the regeneration area. Only plants managed or planted by the regenerator must be counted.",
     "biodiversityResult": "Biodiversity result",
-    "biodiversityResultDescription": "The number of different species of trees, palm trees and other plants larger than 5 cm in diameter found in the regeneration area. Only plants managed or planted by the regenerator must be counted.",
+    "biodiversityResultDescription": "The number of different species of trees, palm trees and other plants over 1m high and 3cm in diameter found in the regeneration area. Only plants managed or planted by the regenerator must be counted.",
     "report": "Report",
     "reportDescription": "As you fill in the data, an automated report with the justification for the result found will be created automatically and will be available for download.",
     "howWouldYouLikeCollectData": "How would you like to collect the data?",
