--- a/src/lang/pt/pt.json
+++ b/src/lang/pt/pt.json
@@ -5,9 +5,9 @@
     "overview": "Visão geral",
     "overviewDescription": "O seu objetivo é avaliar a quantidade de árvores com mais de 5cm de diâmetro da área selecionada, bem como a diversidade de espécies das mesmas.",
     "treesResult": "Resultado de árvores",
-    "treesResultDescription": "Número de árvores, palmeiras e outras plantas com mais de 5 cm de diâmetro encontradas na área de regeneração. Somente plantas manejadas ou plantadas pelo gerador devem ser contabilizadas.",
+    "treesResultDescription": "Número de árvores, palmeiras e outras plantas com mais de 1 m de altura e 3 cm de diâmetro encontradas na área de regeneração. Somente plantas manejadas ou plantadas pelo regenerador devem ser contabilizadas.",
     "biodiversityResult": "Resultado de biodiversidade",
-    "biodiversityResultDescription": "O número de diferentes espécies de árvores, palmeiras e outras plantas com mais de 5 cm de diâmetro encontradas na área de regeneração. Somente plantas manejadas ou plantadas pelo regenerador devem ser contabilizadas.",
+    "biodiversityResultDescription": "Número de diferentes espécies de árvores, palmeiras e outras plantas com mais de 1 m de altura e 3 cm de diâmetro encontradas na área de regeneração. Somente plantas manejadas ou plantadas pelo regenerador devem ser contabilizadas.",
     "report": "Relatório",
     "reportDescription": "Conforme for preenchendo os dados, um relatório automatizado com a justificativa do resultado encontrado será criado automaticamente e estará disponível para download.",
     "howWouldYouLikeCollectData": "Como gostaria de coletar os dados?",
