feat: add validation if has gps permission

--- a/src/lang/pt/pt.json
+++ b/src/lang/pt/pt.json
@@ -95,6 +95,10 @@
     "samplingTrees1": "Plantas amostragem 1",
     "samplingTreesN": "Plantas amostragem N",
     "numberOfSamplings": "Quantidade de amostragens",
-    "collectionMethod": "Método de coleta"
+    "collectionMethod": "Método de coleta",
+    "weNeedYourGPSPermission": "Precisamos acessar sua localização",
+    "descWeNeedYourGPSPermission": "Para realizar a inspeção é necessário acessar sua localização em tempo real, para garantir a coleta de coordenadas ao registrar os items.",
+    "givePermission": "Dar permissão",
+    "helpGivePermission": "Se nada acontecer ao tocar no botão, entre nas configurações do seu dispositivo -> aplicativos -> Sintropia -> Permissões. E ative a permissão de localização."
   }
 }
