--- a/src/lang/en/en.json
+++ b/src/lang/en/en.json
@@ -94,6 +94,10 @@
     "samplingTrees1": "Sampling trees 1",
     "samplingTreesN": "Sampling trees N",
     "numberOfSamplings": "Number of samplings",
-    "collectionMethod": "Collection method"
+    "collectionMethod": "Collection method",
+    "weNeedYourGPSPermission": "We need your GPS permission",
+    "descWeNeedYourGPSPermission": "To carry out the inspection, it is necessary to access your location in real time, to ensure the collection of coordinates when registering the items.",
+    "givePermission": "Give permission",
+    "helpGivePermission": "If nothing happens when you tap the button, go to your device's settings -> apps -> Syntropy -> Permissions. And enable the location permission."
   }
 }
