feat:  add new hook use permissions to access camera

--- a/src/lang/en/en.json
+++ b/src/lang/en/en.json
@@ -104,6 +104,9 @@
     "creatingPDF": "Creating PDF",
     "youAreOutsideTheCollectionArea": "You are outside the collection area",
     "subtitle": "Subtitle",
-    "youHaveAnOpenedInspection": "You have an opened inspection"
+    "youHaveAnOpenedInspection": "You have an opened inspection",
+    "weNeedYourCameraPermission": "We need your camera permission",
+    "descWeNeedYourCameraPermission": "During the inspection it is necessary to take some photos with your camera.",
+    "helpGiveCameraPermission": "If nothing happens when you tap the button, go to your device's settings -> apps -> Syntropy -> Permissions. And enable the camera permission."
   }
 }
