--- a/src/lang/pt/pt.json
+++ b/src/lang/pt/pt.json
@@ -105,6 +105,9 @@
     "creatingPDF": "Criando PDF",
     "youAreOutsideTheCollectionArea": "Você está fora da área de coleta",
     "subtitle": "Legenda",
-    "youHaveAnOpenedInspection": "Você tem uma inspeção em aberto"
+    "youHaveAnOpenedInspection": "Você tem uma inspeção em aberto",
+    "weNeedYourCameraPermission": "Precisamos acessar sua câmera",
+    "descWeNeedYourCameraPermission": "Durante a inspeção é necessário registrar algumas fotos com sua câmera",
+    "helpGiveCameraPermission": "Se nada acontecer ao tocar no botão, entre nas configurações do seu dispositivo -> aplicativos -> Sintropia -> Permissões. E ative a permissão de câmera."
   }
 }
