--- a/src/lang/en/en.json
+++ b/src/lang/en/en.json
@@ -115,6 +115,11 @@
       "touchToRegister": "Touch to register",
       "textConfirmDeletePhoto": "Do you want to delete this photo?",
       "deletePhoto": "Delete photo"
+    },
+    "reportScreen": {
+      "inspectionReport": "Inspection report",
+      "proofPhotosReport": "Proof photos report",
+      "share": "Share"
     }
   }
 }
