--- a/src/lang/en/en.json
+++ b/src/lang/en/en.json
@@ -114,12 +114,17 @@
       "registerMorePhotosOfArea": "Register more photos of area",
       "touchToRegister": "Touch to register",
       "textConfirmDeletePhoto": "Do you want to delete this photo?",
-      "deletePhoto": "Delete photo"
+      "deletePhoto": "Delete photo",
+      "selectPhotoSource": "Select photo source",
+      "textConfirmSelectPhotoSource": "Choose whether you want to take a photo or select from your device's gallery",
+      "gallery": "Gallery",
+      "camera": "Camera"
     },
     "reportScreen": {
       "inspectionReport": "Inspection report",
       "proofPhotosReport": "Proof photos report",
-      "share": "Share"
+      "share": "Share",
+      "justificationReport": "Justification report"
     }
   }
 }
