add link privacy policy

--- a/src/lang/en/en.json
+++ b/src/lang/en/en.json
@@ -1,5 +1,8 @@
 {
   "translation": {
+    "homeScreen": {
+      "privacyPolicy": "Privacy policy"
+    },
     "whichAreaDoYouWantToInspect": "Which Area Do You Want To Inspect?",
     "selectInspection": "Select inspection",
     "seeYourAreasAlreadyInspected": "See your areas already inspected",
