--- a/src/lang/en/en.json
+++ b/src/lang/en/en.json
@@ -128,6 +128,10 @@
       "proofPhotosReport": "Proof photos report",
       "share": "Share",
       "justificationReport": "Justification report"
+    },
+    "inspectorReport": {
+      "title": "Inspector report",
+      "description": "This is a place where inspectors can relate how was the inspection or add a delation text"
     }
   }
 }
